--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "1.0.0",
   "description": "Template for Acode plugin",
   "main": "src/main.js",
-  "repository": "https://github.com/Acode-Foundation/acode-plugin.git",
-  "author": "Acode Foundation",
+  "repository": "",
+  "author": "Rohit",
   "license": "MIT",
   "dependencies": {
     "acode-plugin-types": "^1.11.7-patch.2",
+    "asciidoctor": "^3.0.4",
     "html-tag-js": "^2.4.15"
   },
   "devDependencies": {
